replaced Supplier<ExecutionContext> with LifeCycle (can create and close instance); jersey dependency must be upgraded 2.35 -> 3.1.3 for jakarta; profiles needed